build/turtle-parser.output
Nonterminals useless in grammar

    color


Terminals unused in grammar

    "name"
    "red"
    "green"
    "blue"
    "cyan"
    "magenta"
    "yellow"
    "black"
    "grey"
    "white"


Rules useless in grammar

   33 color: "red"
   34      | "green"
   35      | "blue"
   36      | "cyan"
   37      | "magenta"
   38      | "yellow"
   39      | "black"
   40      | "grey"
   41      | "white"
   42      | expr expr expr


State 27 conflicts: 1 shift/reduce


Grammar

    0 $accept: unit $end

    1 unit: cmds

    2 cmds: cmd cmds
    3     | ε

    4 param: expr
    5      | cmd

    6 cmd: "forward" param
    7    | "backward" param
    8    | "right" param
    9    | "left" param
   10    | "print" param
   11    | "heading" param
   12    | "up"
   13    | "down"
   14    | "color" param
   15    | "position" param param
   16    | "home"
   17    | "repeat" param cmd
   18    | '{' cmds '}'

   19 expr: "value"
   20     | '-' "value"
   21     | expr '+' expr
   22     | expr '-' expr
   23     | expr '^' expr
   24     | expr '*' expr
   25     | expr '/' expr
   26     | "sin" '(' expr ')'
   27     | "cos" '(' expr ')'
   28     | "tan" '(' expr ')'
   29     | "sqrt" '(' expr ')'
   30     | "random" '(' expr ',' expr ')'
   31     | '(' expr ')'
   32     | '-' '(' expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 26 27 28 29 30 31 32
    ')' (41) 26 27 28 29 30 31 32
    '*' (42) 24
    '+' (43) 21
    ',' (44) 30
    '-' (45) 20 22 32
    '/' (47) 25
    '^' (94) 23
    '{' (123) 18
    '}' (125) 18
    error (256)
    "value" <value> (258) 19 20
    "name" <name> (259)
    "red" (260)
    "green" (261)
    "blue" (262)
    "cyan" (263)
    "magenta" (264)
    "yellow" (265)
    "black" (266)
    "grey" (267)
    "white" (268)
    "sin" (269) 26
    "cos" (270) 27
    "tan" (271) 28
    "sqrt" (272) 29
    "random" (273) 30
    "forward" (274) 6
    "backward" (275) 7
    "position" (276) 15
    "right" (277) 8
    "left" (278) 9
    "print" (279) 10
    "heading" (280) 11
    "up" (281) 12
    "down" (282) 13
    "color" (283) 14
    "home" (284) 16
    "repeat" (285) 17
    UNARY_MINUS (286)


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    unit <node> (43)
        on left: 1
        on right: 0
    cmds <node> (44)
        on left: 2 3
        on right: 1 2 18
    param <node> (45)
        on left: 4 5
        on right: 6 7 8 9 10 11 14 15 17
    cmd <node> (46)
        on left: 6 7 8 9 10 11 12 13 14 15 16 17 18
        on right: 2 5 17
    expr <node> (47)
        on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32
        on right: 4 21 22 23 24 25 26 27 28 29 30 31 32


State 0

    0 $accept: • unit $end

    "forward"   shift, and go to state 1
    "backward"  shift, and go to state 2
    "position"  shift, and go to state 3
    "right"     shift, and go to state 4
    "left"      shift, and go to state 5
    "print"     shift, and go to state 6
    "heading"   shift, and go to state 7
    "up"        shift, and go to state 8
    "down"      shift, and go to state 9
    "color"     shift, and go to state 10
    "home"      shift, and go to state 11
    "repeat"    shift, and go to state 12
    '{'         shift, and go to state 13

    $default  reduce using rule 3 (cmds)

    unit  go to state 14
    cmds  go to state 15
    cmd   go to state 16


State 1

    6 cmd: "forward" • param

    "value"     shift, and go to state 17
    "sin"       shift, and go to state 18
    "cos"       shift, and go to state 19
    "tan"       shift, and go to state 20
    "sqrt"      shift, and go to state 21
    "random"    shift, and go to state 22
    "forward"   shift, and go to state 1
    "backward"  shift, and go to state 2
    "position"  shift, and go to state 3
    "right"     shift, and go to state 4
    "left"      shift, and go to state 5
    "print"     shift, and go to state 6
    "heading"   shift, and go to state 7
    "up"        shift, and go to state 8
    "down"      shift, and go to state 9
    "color"     shift, and go to state 10
    "home"      shift, and go to state 11
    "repeat"    shift, and go to state 12
    '-'         shift, and go to state 23
    '{'         shift, and go to state 13
    '('         shift, and go to state 24

    param  go to state 25
    cmd    go to state 26
    expr   go to state 27


State 2

    7 cmd: "backward" • param

    "value"     shift, and go to state 17
    "sin"       shift, and go to state 18
    "cos"       shift, and go to state 19
    "tan"       shift, and go to state 20
    "sqrt"      shift, and go to state 21
    "random"    shift, and go to state 22
    "forward"   shift, and go to state 1
    "backward"  shift, and go to state 2
    "position"  shift, and go to state 3
    "right"     shift, and go to state 4
    "left"      shift, and go to state 5
    "print"     shift, and go to state 6
    "heading"   shift, and go to state 7
    "up"        shift, and go to state 8
    "down"      shift, and go to state 9
    "color"     shift, and go to state 10
    "home"      shift, and go to state 11
    "repeat"    shift, and go to state 12
    '-'         shift, and go to state 23
    '{'         shift, and go to state 13
    '('         shift, and go to state 24

    param  go to state 28
    cmd    go to state 26
    expr   go to state 27


State 3

   15 cmd: "position" • param param

    "value"     shift, and go to state 17
    "sin"       shift, and go to state 18
    "cos"       shift, and go to state 19
    "tan"       shift, and go to state 20
    "sqrt"      shift, and go to state 21
    "random"    shift, and go to state 22
    "forward"   shift, and go to state 1
    "backward"  shift, and go to state 2
    "position"  shift, and go to state 3
    "right"     shift, and go to state 4
    "left"      shift, and go to state 5
    "print"     shift, and go to state 6
    "heading"   shift, and go to state 7
    "up"        shift, and go to state 8
    "down"      shift, and go to state 9
    "color"     shift, and go to state 10
    "home"      shift, and go to state 11
    "repeat"    shift, and go to state 12
    '-'         shift, and go to state 23
    '{'         shift, and go to state 13
    '('         shift, and go to state 24

    param  go to state 29
    cmd    go to state 26
    expr   go to state 27


State 4

    8 cmd: "right" • param

    "value"     shift, and go to state 17
    "sin"       shift, and go to state 18
    "cos"       shift, and go to state 19
    "tan"       shift, and go to state 20
    "sqrt"      shift, and go to state 21
    "random"    shift, and go to state 22
    "forward"   shift, and go to state 1
    "backward"  shift, and go to state 2
    "position"  shift, and go to state 3
    "right"     shift, and go to state 4
    "left"      shift, and go to state 5
    "print"     shift, and go to state 6
    "heading"   shift, and go to state 7
    "up"        shift, and go to state 8
    "down"      shift, and go to state 9
    "color"     shift, and go to state 10
    "home"      shift, and go to state 11
    "repeat"    shift, and go to state 12
    '-'         shift, and go to state 23
    '{'         shift, and go to state 13
    '('         shift, and go to state 24

    param  go to state 30
    cmd    go to state 26
    expr   go to state 27


State 5

    9 cmd: "left" • param

    "value"     shift, and go to state 17
    "sin"       shift, and go to state 18
    "cos"       shift, and go to state 19
    "tan"       shift, and go to state 20
    "sqrt"      shift, and go to state 21
    "random"    shift, and go to state 22
    "forward"   shift, and go to state 1
    "backward"  shift, and go to state 2
    "position"  shift, and go to state 3
    "right"     shift, and go to state 4
    "left"      shift, and go to state 5
    "print"     shift, and go to state 6
    "heading"   shift, and go to state 7
    "up"        shift, and go to state 8
    "down"      shift, and go to state 9
    "color"     shift, and go to state 10
    "home"      shift, and go to state 11
    "repeat"    shift, and go to state 12
    '-'         shift, and go to state 23
    '{'         shift, and go to state 13
    '('         shift, and go to state 24

    param  go to state 31
    cmd    go to state 26
    expr   go to state 27


State 6

   10 cmd: "print" • param

    "value"     shift, and go to state 17
    "sin"       shift, and go to state 18
    "cos"       shift, and go to state 19
    "tan"       shift, and go to state 20
    "sqrt"      shift, and go to state 21
    "random"    shift, and go to state 22
    "forward"   shift, and go to state 1
    "backward"  shift, and go to state 2
    "position"  shift, and go to state 3
    "right"     shift, and go to state 4
    "left"      shift, and go to state 5
    "print"     shift, and go to state 6
    "heading"   shift, and go to state 7
    "up"        shift, and go to state 8
    "down"      shift, and go to state 9
    "color"     shift, and go to state 10
    "home"      shift, and go to state 11
    "repeat"    shift, and go to state 12
    '-'         shift, and go to state 23
    '{'         shift, and go to state 13
    '('         shift, and go to state 24

    param  go to state 32
    cmd    go to state 26
    expr   go to state 27


State 7

   11 cmd: "heading" • param

    "value"     shift, and go to state 17
    "sin"       shift, and go to state 18
    "cos"       shift, and go to state 19
    "tan"       shift, and go to state 20
    "sqrt"      shift, and go to state 21
    "random"    shift, and go to state 22
    "forward"   shift, and go to state 1
    "backward"  shift, and go to state 2
    "position"  shift, and go to state 3
    "right"     shift, and go to state 4
    "left"      shift, and go to state 5
    "print"     shift, and go to state 6
    "heading"   shift, and go to state 7
    "up"        shift, and go to state 8
    "down"      shift, and go to state 9
    "color"     shift, and go to state 10
    "home"      shift, and go to state 11
    "repeat"    shift, and go to state 12
    '-'         shift, and go to state 23
    '{'         shift, and go to state 13
    '('         shift, and go to state 24

    param  go to state 33
    cmd    go to state 26
    expr   go to state 27


State 8

   12 cmd: "up" •

    $default  reduce using rule 12 (cmd)


State 9

   13 cmd: "down" •

    $default  reduce using rule 13 (cmd)


State 10

   14 cmd: "color" • param

    "value"     shift, and go to state 17
    "sin"       shift, and go to state 18
    "cos"       shift, and go to state 19
    "tan"       shift, and go to state 20
    "sqrt"      shift, and go to state 21
    "random"    shift, and go to state 22
    "forward"   shift, and go to state 1
    "backward"  shift, and go to state 2
    "position"  shift, and go to state 3
    "right"     shift, and go to state 4
    "left"      shift, and go to state 5
    "print"     shift, and go to state 6
    "heading"   shift, and go to state 7
    "up"        shift, and go to state 8
    "down"      shift, and go to state 9
    "color"     shift, and go to state 10
    "home"      shift, and go to state 11
    "repeat"    shift, and go to state 12
    '-'         shift, and go to state 23
    '{'         shift, and go to state 13
    '('         shift, and go to state 24

    param  go to state 34
    cmd    go to state 26
    expr   go to state 27


State 11

   16 cmd: "home" •

    $default  reduce using rule 16 (cmd)


State 12

   17 cmd: "repeat" • param cmd

    "value"     shift, and go to state 17
    "sin"       shift, and go to state 18
    "cos"       shift, and go to state 19
    "tan"       shift, and go to state 20
    "sqrt"      shift, and go to state 21
    "random"    shift, and go to state 22
    "forward"   shift, and go to state 1
    "backward"  shift, and go to state 2
    "position"  shift, and go to state 3
    "right"     shift, and go to state 4
    "left"      shift, and go to state 5
    "print"     shift, and go to state 6
    "heading"   shift, and go to state 7
    "up"        shift, and go to state 8
    "down"      shift, and go to state 9
    "color"     shift, and go to state 10
    "home"      shift, and go to state 11
    "repeat"    shift, and go to state 12
    '-'         shift, and go to state 23
    '{'         shift, and go to state 13
    '('         shift, and go to state 24

    param  go to state 35
    cmd    go to state 26
    expr   go to state 27


State 13

   18 cmd: '{' • cmds '}'

    "forward"   shift, and go to state 1
    "backward"  shift, and go to state 2
    "position"  shift, and go to state 3
    "right"     shift, and go to state 4
    "left"      shift, and go to state 5
    "print"     shift, and go to state 6
    "heading"   shift, and go to state 7
    "up"        shift, and go to state 8
    "down"      shift, and go to state 9
    "color"     shift, and go to state 10
    "home"      shift, and go to state 11
    "repeat"    shift, and go to state 12
    '{'         shift, and go to state 13

    $default  reduce using rule 3 (cmds)

    cmds  go to state 36
    cmd   go to state 16


State 14

    0 $accept: unit • $end

    $end  shift, and go to state 37


State 15

    1 unit: cmds •

    $default  reduce using rule 1 (unit)


State 16

    2 cmds: cmd • cmds

    "forward"   shift, and go to state 1
    "backward"  shift, and go to state 2
    "position"  shift, and go to state 3
    "right"     shift, and go to state 4
    "left"      shift, and go to state 5
    "print"     shift, and go to state 6
    "heading"   shift, and go to state 7
    "up"        shift, and go to state 8
    "down"      shift, and go to state 9
    "color"     shift, and go to state 10
    "home"      shift, and go to state 11
    "repeat"    shift, and go to state 12
    '{'         shift, and go to state 13

    $default  reduce using rule 3 (cmds)

    cmds  go to state 38
    cmd   go to state 16


State 17

   19 expr: "value" •

    $default  reduce using rule 19 (expr)


State 18

   26 expr: "sin" • '(' expr ')'

    '('  shift, and go to state 39


State 19

   27 expr: "cos" • '(' expr ')'

    '('  shift, and go to state 40


State 20

   28 expr: "tan" • '(' expr ')'

    '('  shift, and go to state 41


State 21

   29 expr: "sqrt" • '(' expr ')'

    '('  shift, and go to state 42


State 22

   30 expr: "random" • '(' expr ',' expr ')'

    '('  shift, and go to state 43


State 23

   20 expr: '-' • "value"
   32     | '-' • '(' expr ')'

    "value"  shift, and go to state 44
    '('      shift, and go to state 45


State 24

   31 expr: '(' • expr ')'

    "value"   shift, and go to state 17
    "sin"     shift, and go to state 18
    "cos"     shift, and go to state 19
    "tan"     shift, and go to state 20
    "sqrt"    shift, and go to state 21
    "random"  shift, and go to state 22
    '-'       shift, and go to state 23
    '('       shift, and go to state 24

    expr  go to state 46


State 25

    6 cmd: "forward" param •

    $default  reduce using rule 6 (cmd)


State 26

    5 param: cmd •

    $default  reduce using rule 5 (param)


State 27

    4 param: expr •
   21 expr: expr • '+' expr
   22     | expr • '-' expr
   23     | expr • '^' expr
   24     | expr • '*' expr
   25     | expr • '/' expr

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '^'  shift, and go to state 51

    '-'       [reduce using rule 4 (param)]
    $default  reduce using rule 4 (param)


State 28

    7 cmd: "backward" param •

    $default  reduce using rule 7 (cmd)


State 29

   15 cmd: "position" param • param

    "value"     shift, and go to state 17
    "sin"       shift, and go to state 18
    "cos"       shift, and go to state 19
    "tan"       shift, and go to state 20
    "sqrt"      shift, and go to state 21
    "random"    shift, and go to state 22
    "forward"   shift, and go to state 1
    "backward"  shift, and go to state 2
    "position"  shift, and go to state 3
    "right"     shift, and go to state 4
    "left"      shift, and go to state 5
    "print"     shift, and go to state 6
    "heading"   shift, and go to state 7
    "up"        shift, and go to state 8
    "down"      shift, and go to state 9
    "color"     shift, and go to state 10
    "home"      shift, and go to state 11
    "repeat"    shift, and go to state 12
    '-'         shift, and go to state 23
    '{'         shift, and go to state 13
    '('         shift, and go to state 24

    param  go to state 52
    cmd    go to state 26
    expr   go to state 27


State 30

    8 cmd: "right" param •

    $default  reduce using rule 8 (cmd)


State 31

    9 cmd: "left" param •

    $default  reduce using rule 9 (cmd)


State 32

   10 cmd: "print" param •

    $default  reduce using rule 10 (cmd)


State 33

   11 cmd: "heading" param •

    $default  reduce using rule 11 (cmd)


State 34

   14 cmd: "color" param •

    $default  reduce using rule 14 (cmd)


State 35

   17 cmd: "repeat" param • cmd

    "forward"   shift, and go to state 1
    "backward"  shift, and go to state 2
    "position"  shift, and go to state 3
    "right"     shift, and go to state 4
    "left"      shift, and go to state 5
    "print"     shift, and go to state 6
    "heading"   shift, and go to state 7
    "up"        shift, and go to state 8
    "down"      shift, and go to state 9
    "color"     shift, and go to state 10
    "home"      shift, and go to state 11
    "repeat"    shift, and go to state 12
    '{'         shift, and go to state 13

    cmd  go to state 53


State 36

   18 cmd: '{' cmds • '}'

    '}'  shift, and go to state 54


State 37

    0 $accept: unit $end •

    $default  accept


State 38

    2 cmds: cmd cmds •

    $default  reduce using rule 2 (cmds)


State 39

   26 expr: "sin" '(' • expr ')'

    "value"   shift, and go to state 17
    "sin"     shift, and go to state 18
    "cos"     shift, and go to state 19
    "tan"     shift, and go to state 20
    "sqrt"    shift, and go to state 21
    "random"  shift, and go to state 22
    '-'       shift, and go to state 23
    '('       shift, and go to state 24

    expr  go to state 55


State 40

   27 expr: "cos" '(' • expr ')'

    "value"   shift, and go to state 17
    "sin"     shift, and go to state 18
    "cos"     shift, and go to state 19
    "tan"     shift, and go to state 20
    "sqrt"    shift, and go to state 21
    "random"  shift, and go to state 22
    '-'       shift, and go to state 23
    '('       shift, and go to state 24

    expr  go to state 56


State 41

   28 expr: "tan" '(' • expr ')'

    "value"   shift, and go to state 17
    "sin"     shift, and go to state 18
    "cos"     shift, and go to state 19
    "tan"     shift, and go to state 20
    "sqrt"    shift, and go to state 21
    "random"  shift, and go to state 22
    '-'       shift, and go to state 23
    '('       shift, and go to state 24

    expr  go to state 57


State 42

   29 expr: "sqrt" '(' • expr ')'

    "value"   shift, and go to state 17
    "sin"     shift, and go to state 18
    "cos"     shift, and go to state 19
    "tan"     shift, and go to state 20
    "sqrt"    shift, and go to state 21
    "random"  shift, and go to state 22
    '-'       shift, and go to state 23
    '('       shift, and go to state 24

    expr  go to state 58


State 43

   30 expr: "random" '(' • expr ',' expr ')'

    "value"   shift, and go to state 17
    "sin"     shift, and go to state 18
    "cos"     shift, and go to state 19
    "tan"     shift, and go to state 20
    "sqrt"    shift, and go to state 21
    "random"  shift, and go to state 22
    '-'       shift, and go to state 23
    '('       shift, and go to state 24

    expr  go to state 59


State 44

   20 expr: '-' "value" •

    $default  reduce using rule 20 (expr)


State 45

   32 expr: '-' '(' • expr ')'

    "value"   shift, and go to state 17
    "sin"     shift, and go to state 18
    "cos"     shift, and go to state 19
    "tan"     shift, and go to state 20
    "sqrt"    shift, and go to state 21
    "random"  shift, and go to state 22
    '-'       shift, and go to state 23
    '('       shift, and go to state 24

    expr  go to state 60


State 46

   21 expr: expr • '+' expr
   22     | expr • '-' expr
   23     | expr • '^' expr
   24     | expr • '*' expr
   25     | expr • '/' expr
   31     | '(' expr • ')'

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '^'  shift, and go to state 51
    ')'  shift, and go to state 61


State 47

   21 expr: expr '+' • expr

    "value"   shift, and go to state 17
    "sin"     shift, and go to state 18
    "cos"     shift, and go to state 19
    "tan"     shift, and go to state 20
    "sqrt"    shift, and go to state 21
    "random"  shift, and go to state 22
    '-'       shift, and go to state 23
    '('       shift, and go to state 24

    expr  go to state 62


State 48

   22 expr: expr '-' • expr

    "value"   shift, and go to state 17
    "sin"     shift, and go to state 18
    "cos"     shift, and go to state 19
    "tan"     shift, and go to state 20
    "sqrt"    shift, and go to state 21
    "random"  shift, and go to state 22
    '-'       shift, and go to state 23
    '('       shift, and go to state 24

    expr  go to state 63


State 49

   24 expr: expr '*' • expr

    "value"   shift, and go to state 17
    "sin"     shift, and go to state 18
    "cos"     shift, and go to state 19
    "tan"     shift, and go to state 20
    "sqrt"    shift, and go to state 21
    "random"  shift, and go to state 22
    '-'       shift, and go to state 23
    '('       shift, and go to state 24

    expr  go to state 64


State 50

   25 expr: expr '/' • expr

    "value"   shift, and go to state 17
    "sin"     shift, and go to state 18
    "cos"     shift, and go to state 19
    "tan"     shift, and go to state 20
    "sqrt"    shift, and go to state 21
    "random"  shift, and go to state 22
    '-'       shift, and go to state 23
    '('       shift, and go to state 24

    expr  go to state 65


State 51

   23 expr: expr '^' • expr

    "value"   shift, and go to state 17
    "sin"     shift, and go to state 18
    "cos"     shift, and go to state 19
    "tan"     shift, and go to state 20
    "sqrt"    shift, and go to state 21
    "random"  shift, and go to state 22
    '-'       shift, and go to state 23
    '('       shift, and go to state 24

    expr  go to state 66


State 52

   15 cmd: "position" param param •

    $default  reduce using rule 15 (cmd)


State 53

   17 cmd: "repeat" param cmd •

    $default  reduce using rule 17 (cmd)


State 54

   18 cmd: '{' cmds '}' •

    $default  reduce using rule 18 (cmd)


State 55

   21 expr: expr • '+' expr
   22     | expr • '-' expr
   23     | expr • '^' expr
   24     | expr • '*' expr
   25     | expr • '/' expr
   26     | "sin" '(' expr • ')'

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '^'  shift, and go to state 51
    ')'  shift, and go to state 67


State 56

   21 expr: expr • '+' expr
   22     | expr • '-' expr
   23     | expr • '^' expr
   24     | expr • '*' expr
   25     | expr • '/' expr
   27     | "cos" '(' expr • ')'

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '^'  shift, and go to state 51
    ')'  shift, and go to state 68


State 57

   21 expr: expr • '+' expr
   22     | expr • '-' expr
   23     | expr • '^' expr
   24     | expr • '*' expr
   25     | expr • '/' expr
   28     | "tan" '(' expr • ')'

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '^'  shift, and go to state 51
    ')'  shift, and go to state 69


State 58

   21 expr: expr • '+' expr
   22     | expr • '-' expr
   23     | expr • '^' expr
   24     | expr • '*' expr
   25     | expr • '/' expr
   29     | "sqrt" '(' expr • ')'

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '^'  shift, and go to state 51
    ')'  shift, and go to state 70


State 59

   21 expr: expr • '+' expr
   22     | expr • '-' expr
   23     | expr • '^' expr
   24     | expr • '*' expr
   25     | expr • '/' expr
   30     | "random" '(' expr • ',' expr ')'

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '^'  shift, and go to state 51
    ','  shift, and go to state 71


State 60

   21 expr: expr • '+' expr
   22     | expr • '-' expr
   23     | expr • '^' expr
   24     | expr • '*' expr
   25     | expr • '/' expr
   32     | '-' '(' expr • ')'

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '^'  shift, and go to state 51
    ')'  shift, and go to state 72


State 61

   31 expr: '(' expr ')' •

    $default  reduce using rule 31 (expr)


State 62

   21 expr: expr • '+' expr
   21     | expr '+' expr •
   22     | expr • '-' expr
   23     | expr • '^' expr
   24     | expr • '*' expr
   25     | expr • '/' expr

    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '^'  shift, and go to state 51

    $default  reduce using rule 21 (expr)


State 63

   21 expr: expr • '+' expr
   22     | expr • '-' expr
   22     | expr '-' expr •
   23     | expr • '^' expr
   24     | expr • '*' expr
   25     | expr • '/' expr

    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '^'  shift, and go to state 51

    $default  reduce using rule 22 (expr)


State 64

   21 expr: expr • '+' expr
   22     | expr • '-' expr
   23     | expr • '^' expr
   24     | expr • '*' expr
   24     | expr '*' expr •
   25     | expr • '/' expr

    '^'  shift, and go to state 51

    $default  reduce using rule 24 (expr)


State 65

   21 expr: expr • '+' expr
   22     | expr • '-' expr
   23     | expr • '^' expr
   24     | expr • '*' expr
   25     | expr • '/' expr
   25     | expr '/' expr •

    '^'  shift, and go to state 51

    $default  reduce using rule 25 (expr)


State 66

   21 expr: expr • '+' expr
   22     | expr • '-' expr
   23     | expr • '^' expr
   23     | expr '^' expr •
   24     | expr • '*' expr
   25     | expr • '/' expr

    $default  reduce using rule 23 (expr)


State 67

   26 expr: "sin" '(' expr ')' •

    $default  reduce using rule 26 (expr)


State 68

   27 expr: "cos" '(' expr ')' •

    $default  reduce using rule 27 (expr)


State 69

   28 expr: "tan" '(' expr ')' •

    $default  reduce using rule 28 (expr)


State 70

   29 expr: "sqrt" '(' expr ')' •

    $default  reduce using rule 29 (expr)


State 71

   30 expr: "random" '(' expr ',' • expr ')'

    "value"   shift, and go to state 17
    "sin"     shift, and go to state 18
    "cos"     shift, and go to state 19
    "tan"     shift, and go to state 20
    "sqrt"    shift, and go to state 21
    "random"  shift, and go to state 22
    '-'       shift, and go to state 23
    '('       shift, and go to state 24

    expr  go to state 73


State 72

   32 expr: '-' '(' expr ')' •

    $default  reduce using rule 32 (expr)


State 73

   21 expr: expr • '+' expr
   22     | expr • '-' expr
   23     | expr • '^' expr
   24     | expr • '*' expr
   25     | expr • '/' expr
   30     | "random" '(' expr ',' expr • ')'

    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '*'  shift, and go to state 49
    '/'  shift, and go to state 50
    '^'  shift, and go to state 51
    ')'  shift, and go to state 74


State 74

   30 expr: "random" '(' expr ',' expr ')' •

    $default  reduce using rule 30 (expr)
